manifests/gateway/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp
  namespace: kgateway-system
  labels:
    app: agentgateway-kyverno
spec:
  parentRefs:
  - name: agentgateway
    namespace: kgateway-system
  rules:
    - backendRefs:
      - name: mcp
        group: gateway.kgateway.dev
        kind: Backend
    - backendRefs:
      - name: openai
        namespace: kgateway-system
        group: gateway.kgateway.dev
        kind: Backend
      matches:
      - path:
          type: PathPrefix
          value: /openai
      filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplaceFullPath
            replaceFullPath: /v1/chat/completions
